fix: protect titles from overflow by width

--- a/blocks/quotes/__card/quotes__card.css
+++ b/blocks/quotes/__card/quotes__card.css
@@ -1,5 +1,6 @@
 .quotes__card {
   margin-bottom: 60px;
+  max-width: 266px;
   }
 
 @media  screen and (max-width: 1325px) {
